View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031636 | Open CASCADE | PRODUCTS:Coding | public | 2020-06-28 14:05 | 2021-12-17 18:41 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0031636: Codig Rules, OMFAlgo - replace TCollection templates with NCollection | ||||
Description | Package TCollection contains files related to old collections like TCollection_Array1.lxx, which are no more exist. For this, the remnants of generic templates should be removed from OMFAlgo package. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31636 has been created by kgv. SHA-1: b7eb5db40322c9c6aa1bac5c13ee75a73f08646b Detailed log of new commits: Author: kgv Date: Mon Jun 29 10:35:07 2020 +0300 0031636: Codig Rules - eliminate dead code TCollection_Array1.lxx |
|
Branch CR31636_1 has been created by mzernova. SHA-1: d22c7e2795bf1c5ec1f25c5f86ba56abd48ceb80 Detailed log of new commits: Author: kgv Date: Mon Jun 29 10:35:07 2020 +0300 0031636: Codig Rules - eliminate dead code TCollection_Array1.lxx (cherry picked from commit b7eb5db40322c9c6aa1bac5c13ee75a73f08646b) |
|
Branch CR31636_1 has been updated by mzernova. SHA-1: 1bf654cceca7c28c766bbe2b56bf97b6202ce9c7 Detailed log of new commits: Author: mzernova Date: Wed Oct 28 16:03:10 2020 +0300 Removed TCollection_SeqNode.hxx and TCollection_SeqNodePtr.hxx |
|
Branch CR31636_2 has been created by mzernova. SHA-1: 555da1f3dce4770ed65bfa2253e6feb0052c9c8c Detailed log of new commits: Author: kgv Date: Mon Jun 29 10:35:07 2020 +0300 0031636: Codig Rules - eliminate dead code TCollection_Array1.lxx |
|
http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31636_1-CR31636_1-mzernova/ |
|
+OMFAlgo_List.gxx +OMFAlgo_List.lxx +OMFAlgo_ListIterator.gxx +OMFAlgo_ListIterator.lxx ... +#define OMFAlgo_DataMap_hxx <OMFAlgo_DataMapOfIntegerMapOfInteger.hxx> +#include <OMFAlgo_DataMapIterator.gxx> ... .lxx and .gxx files are remnants of the past - there should be no need in adding new .lxx files (except for large header-only templates) and should be a better way then defining .gxx files. |
|
+template <class TheKey, class TheItem, class TheHasher> +class OMFAlgo_DataMap : public TCollection_BasicMap Class description is missing. It is unclear how this template is different from NCollection_DataMap and similar maps. The same is for OMFAlgo_List - why not using NCollection_List? |
|
Branch CR31636_2 has been updated forcibly by mzernova. SHA-1: 028bc2d260fc6ab2806c4d43a41d087caefac070 |
|
Please try to get rid of redundant map collections. |
|
Branch CR31636_1 has been updated forcibly by mzernova. SHA-1: 8e388343e768de6731a118fa88552e9ff2a41f28 |
|
OCCT branch: CR31636_2 Products branch: CR31636_1 |
|
Please raise the patch - OCCT branch: None - Products branch: CR31636_3 http://jenkins-test-12.nnov.opencascade.com:8080/view/master-CR31636_3-KGV/ |
|
Combination - OCCT branch : IR-2020-11-20 master SHA - c5892d852bb462075f9db03f31085e35d7b59f35 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-11-20 SHA - a5d1f89f5fa83c955e6a604f57a5b590eb433b43 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18024.090000000127 / 17964.340000000077 [+0.33%] Products Total CPU difference: 12166.12000000011 / 12169.520000000111 [-0.03%] Windows-64-VC14: OCCT Total CPU difference: 19696.90625 / 19723.125 [-0.13%] Products Total CPU difference: 13644.875 / 13567.078125 [+0.57%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Fix has been integrated into master of occt-products repository |
|
Branch CR31636_1 has been deleted by inv. SHA-1: 8e388343e768de6731a118fa88552e9ff2a41f28 |
|
Branch CR31636_2 has been deleted by inv. SHA-1: 028bc2d260fc6ab2806c4d43a41d087caefac070 |
|
Branch CR31636 has been deleted by inv. SHA-1: b7eb5db40322c9c6aa1bac5c13ee75a73f08646b |
occt-products: master 2814d35f 2020-10-28 14:21:20 Committer: kgv Details Diff |
0031636: Codig Rules, OMFAlgo - replace TCollection templates with NCollection |
Affected Issues 0031636 |
|
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - blob | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - src/OMFAlgo/OMFAlgo.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapIteratorOfDataMapOfIntegerListOfTwoNodes.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapIteratorOfDataMapOfIntegerMapOfInteger.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapIteratorOfDataMapOfIntegerMapOfInteger.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapIteratorOfDataMapOfMeshElementListOfTwoNodes.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapIteratorOfDataMapOfTwoNodesMapOfIntPoint.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapIteratorOfDataMapOfTwoNodesMapOfIntPoint.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapNodeOfDataMapOfIntegerMapOfInteger.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapNodeOfDataMapOfMeshElementListOfTwoNodes.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapNodeOfDataMapOfMeshElementXYZ.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapNodeOfDataMapOfTwoNodesMapOfInteger.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapNodeOfDataMapOfTwoNodesMapOfIntPoint.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapNodeOfDataMapOfTwoNodesMapOfIntPoint.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapOfIntegerListOfTwoNodes.cxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_DataMapOfIntegerMapOfInteger.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapOfMeshElementXYZ.cxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_DataMapOfMeshElementXYZ.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapOfMeshNodeIntPoint.cxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_DataMapOfMeshNodeIntPoint.hxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_DataMapOfTwoNodesMapOfInteger.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapOfTwoNodesMapOfIntPoint.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_DataMapOfTwoNodesMapOfIntPoint.hxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_IntEF.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_ListIteratorOfListOfTwoNodes.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_ListIteratorOfListOfTwoNodes.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_ListNodeOfListOfIntPoint.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_ListNodeOfListOfIntPoint.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_ListNodeOfListOfTwoNodes.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_MapIteratorOfMapOfMeshElement.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_MapIteratorOfMapOfTwoNodes.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_MapOfIntPoint.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_MapOfMeshElement.cxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_MapOfTwoNodes.cxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_MapOfTwoNodes.hxx | Diff File | ||
mod - src/OMFAlgo/OMFAlgo_MeshIntersect.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_StdMapNodeOfMapOfMeshElement.hxx | Diff File | ||
rm - src/OMFAlgo/OMFAlgo_StdMapNodeOfMapOfTwoNodes.hxx | Diff File | ||
rm - src/OMFBool/OMFBool_DataMapIteratorOfDataMapOfIntegerListOfTwoNodes.cxx | Diff File | ||
rm - src/OMFBool/OMFBool_DataMapIteratorOfDataMapOfTwoNodesListOfTwoNodes.cxx | Diff File | ||
rm - src/OMFBool/OMFBool_DataMapNodeOfDataMapOfTwoNodesListOfTwoNodes.cxx | Diff File | ||
mod - src/OMFBool/OMFBool_DataMapOfIntegerListOfTwoNodes.hxx | Diff File | ||
rm - src/OMFBool/OMFBool_DataMapOfTwoNodesListOfTwoNodes.cxx | Diff File | ||
mod - src/OMFBool/OMFBool_DataMapOfTwoNodesListOfTwoNodes.hxx | Diff File | ||
mod - src/OMFBool/OMFBool_Face2dTool.cxx | Diff File | ||
mod - src/OMFBool/OMFBool_Face2dTool.hxx | Diff File | ||
mod - src/OMFBool/OMFBool_MeshContour.hxx | Diff File | ||
mod - src/OMFBool/OMFBool_SplitElement.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-06-28 14:05 | kgv | New Issue | |
2020-06-28 14:05 | kgv | Assigned To | => kgv |
2020-06-29 10:33 | git | Note Added: 0092829 | |
2020-06-29 10:34 | kgv | Description Updated | |
2020-08-28 14:27 | kgv | Assigned To | kgv => mzernova |
2020-08-28 14:27 | kgv | Status | new => assigned |
2020-08-28 14:27 | kgv | Target Version | 7.5.0 => 7.6.0 |
2020-10-28 14:39 | git | Note Added: 0096333 | |
2020-10-28 16:15 | git | Note Added: 0096337 | |
2020-10-28 16:15 | git | Note Added: 0096338 | |
2020-10-29 00:27 | mzernova | Note Added: 0096352 | |
2020-10-29 00:29 | mzernova | Assigned To | mzernova => kgv |
2020-10-29 00:29 | mzernova | Status | assigned => resolved |
2020-10-29 00:29 | mzernova | Steps to Reproduce Updated | |
2020-10-29 07:56 | kgv | Note Added: 0096353 | |
2020-10-29 07:56 | kgv | Assigned To | kgv => mzernova |
2020-10-29 07:56 | kgv | Status | resolved => assigned |
2020-10-31 10:10 | mzernova | Assigned To | mzernova => kgv |
2020-10-31 10:10 | mzernova | Status | assigned => resolved |
2020-11-02 10:40 | kgv | Note Added: 0096438 | |
2020-11-02 10:41 | kgv | Note Edited: 0096438 | |
2020-11-02 10:42 | kgv | Assigned To | kgv => mzernova |
2020-11-02 10:42 | kgv | Status | resolved => assigned |
2020-11-16 13:45 | git | Note Added: 0096792 | |
2020-11-16 13:47 | mzernova | Assigned To | mzernova => kgv |
2020-11-16 13:47 | mzernova | Status | assigned => resolved |
2020-11-16 14:48 | kgv | Note Added: 0096795 | |
2020-11-16 14:48 | kgv | Assigned To | kgv => mzernova |
2020-11-16 14:48 | kgv | Status | resolved => assigned |
2020-11-16 17:18 | git | Note Added: 0096800 | |
2020-11-16 22:05 | abv | Relationship added | related to 0029642 |
2020-11-17 09:39 | mzernova | Note Added: 0096812 | |
2020-11-17 09:39 | mzernova | Assigned To | mzernova => kgv |
2020-11-17 09:39 | mzernova | Status | assigned => resolved |
2020-11-17 09:47 | kgv | Category | OCCT:Coding => PRODUCTS:Coding |
2020-11-17 09:47 | kgv | Summary | Codig Rules - eliminate dead code TCollection_Array1.lxx => Codig Rules, OMFAlgo - replace TCollection templates with NCollection |
2020-11-17 14:03 | kgv | Note Added: 0096823 | |
2020-11-17 14:03 | kgv | Assigned To | kgv => bugmaster |
2020-11-17 14:03 | kgv | Status | resolved => reviewed |
2020-11-21 13:00 | bugmaster | Test case number | => Not required |
2020-11-21 13:00 | bugmaster | Note Added: 0096942 | |
2020-11-21 13:00 | bugmaster | Status | reviewed => verified |
2020-11-21 13:00 | bugmaster | Resolution | open => fixed |
2020-11-21 13:02 | bugmaster | Note Added: 0096944 | |
2020-11-21 13:27 | git | Note Added: 0096949 | |
2020-11-21 13:27 | git | Note Added: 0096950 | |
2020-11-21 13:28 | git | Note Added: 0096971 | |
2021-12-17 18:41 | kgv | Changeset attached | => occt-products master 2814d35f |