0031636: Codig Rules - eliminate dead code TCollection_Array1.lxx